Bug 123393 - FILEOPEN RTF Font size in table cell is too big
Summary: FILEOPEN RTF Font size in table cell is too big
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.2
Keywords: bibisected, bisected, filter:rtf, regression
: 123387 (view as bug list)
Depends on:
Blocks: RTF-Tables
  Show dependency treegraph
 
Reported: 2019-02-12 08:16 UTC by Buovjaga
Modified: 2019-02-26 12:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2019-02-12 08:16:29 UTC
1. Open attachment 121101 [details]
2. Focus to the first cell in Table6, with the title Näyttelyluokat

Font size should be 7, but is 10. The other cells in the table have 7.
Observed in a comment in bug 96306.

PDF showing expected layout: attachment 121100 [details]

Caused by https://gerrit.libreoffice.org/plugins/gitiles/core/+/aaa6a5202a447fb4e86d5f016d8e79fbc34a3ed7%5E!/
tdf#109790 RTF import: keep remembering paragraph style between \cell and \row

Adding Cc: to Miklos Vajna
Comment 1 Xisco Faulí 2019-02-12 16:10:19 UTC
*** Bug 123387 has been marked as a duplicate of this bug. ***
Comment 2 Commit Notification 2019-02-26 07:57:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/b7dabb80f45a65713f114c61e1d695f3f8093812%5E%21

tdf#123393 RTF import: fix too big font size in table cell

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2019-02-26 10:33:50 UTC
Confirmed the fix. Thanks.

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 3caf379f1c6398548c65bb7a83e3911d9a8bc444
CPU threads: 8; OS: Linux 4.20; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 26 February 2019
Comment 4 Commit Notification 2019-02-26 12:50:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/bfc0eca6cfabfe6950de3345554318150a531d44%5E%21

tdf#123393 RTF import: fix too big font size in table cell

It will be available in 6.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.